--- a/kayako-helper/src/styles/extensionStyles.scss
+++ b/kayako-helper/src/styles/extensionStyles.scss
@@ -398,6 +398,7 @@
 
 /* ── scroll-to-top button ──────────────────────────────────────────────── */
 #{sel.$scrollTopButton} {
+  width: 27px;
   position: absolute;
   right: 10px;
   bottom: 10px;
@@ -627,7 +628,8 @@
   min-width: 1000px;
   max-width: 1000px;
   cursor: default;
-  height: 348px;          /* fixed height across tabs */
+  height: 700px;          /* fixed height across tabs */
+  padding: 10px 20px !important;
 }
 
 #{sel.$assetsModal}.open { display: flex; }
@@ -641,12 +643,19 @@
 }
 
 #{sel.$assetsNavItem} {
-  padding: 4px 8px;
+  padding: 6px 12px;
   cursor: pointer;
   user-select: none;
 
   &:hover  { background: #f3f3f3; }
-  &.active { font-weight: 600; background: #e6f0ff; }
+  &.active {
+    font-weight: 600;
+    border-radius: 6px;
+    background: hsl(216 70% 94% / 1);
+
+    color: #454545;
+  }
+
 }
 
 #{sel.$assetsList} {               /* Images tab */
@@ -672,7 +681,7 @@
 
 #{sel.$assetsPane} {
   flex: 1;
-  padding: 16px 14px;
+  padding: 6px 0 16px;
   height: 100%;
   overflow: auto;
 }
@@ -879,4 +888,49 @@ root {
     background: var(--dark-mode-background-color) !important;
   }
 
+}
+
+#{sel.$assetsSummary} {
+  margin-bottom: 0 !important;
+}
+
+#{sel.$assetsPane} {
+  padding: 6px 14px 16px;
+}
+
+.kh-close-button {
+  padding: 4px 8px;
+  font-weight: 600;
+  color: #555;
+}
+
+#kh-ephor-add-stage {
+  margin-left: 6px;
+  border-radius: 50%;
+  font-size: 10px;
+  padding: 3px 5px;
+}
+
+#kh-ephor-custom-instr {
+  width: 100%;
+  height: 60px;
+  padding: 8px 10px;
+  resize: vertical;
+  border: 1px solid hsla(232, 8%, 37%, 0.2);
+  border-radius: 12px;
+  filter: drop-shadow(0 0 6px hsla(225, 20%, 60%, 0.015));
+  box-shadow: inset 0 0 4px 0 hsla(0, 0%, 0%, 0.0325), inset 0 0 2px 0 hsla(0, 0%, 0%, 0.0805), inset 0 0 1px 0 hsla(0, 0%, 0%, 0.089), 0 0 12px 0 hsla(0, 0%, 0%, 0.02);
+  background: hsl(225, 40%, 97.5%);
+  margin: 4px 0 0;
+}
+
+#kh-ephor-prompt-input {
+  padding: 8px 10px;
+  resize: vertical;
+  border: 1px solid hsla(232, 8%, 37%, 0.2);
+  border-radius: 12px;
+  filter: drop-shadow(0 0 6px hsla(225, 20%, 60%, 0.015));
+  box-shadow: inset 0 0 4px 0 hsla(0, 0%, 0%, 0.0325), inset 0 0 2px 0 hsla(0, 0%, 0%, 0.0805), inset 0 0 1px 0 hsla(0, 0%, 0%, 0.089), 0 0 12px 0 hsla(0, 0%, 0%, 0.02);
+  background: hsl(225, 40%, 97.5%);
+  margin: 4px 0 0;
 }
