--- a/kayako-helper/src/styles/extensionStyles.scss
+++ b/kayako-helper/src/styles/extensionStyles.scss
@@ -906,9 +906,8 @@ root {
 
 #kh-ephor-add-stage {
   margin-left: 6px;
-  border-radius: 50%;
   font-size: 10px;
-  padding: 3px 5px;
+  padding: 3px 5px !important;
 }
 
 #kh-ephor-custom-instr {
