Cursor is GORGEOUS

--- a/kayako-helper/src/styles/extensionStyles.scss
+++ b/kayako-helper/src/styles/extensionStyles.scss
@@ -1009,3 +1009,7 @@ root {
 .kh-links-url {
   color: hsl(218deg 44.74% 63.22%) !important;
 }
+
+#kp-ephor-channel-list {
+  background: hsl(225, 40%, 97.5%);
+}
