--- a/kayako-helper/src/styles/extensionStyles.scss
+++ b/kayako-helper/src/styles/extensionStyles.scss
@@ -138,7 +138,7 @@
   background: white;
   padding: 6px 26px !important;
   border: 1px solid hsl(218 23% 87% / 1);
-  box-shadow: 0 0 8px 0 hsl(0deg 0% 0% / 4%);
+  box-shadow: rgba(0, 0, 0, 0.035) 0px 0px 8px 0px, rgba(0, 0, 0, 0.01) 0px 0px 18px 0px;
   border-radius: 8px;
   margin-bottom: 12px;
   text-align: left;
