--- a/kayako-helper/src/styles/extensionStyles.scss
+++ b/kayako-helper/src/styles/extensionStyles.scss
@@ -143,6 +143,8 @@
   margin-bottom: 12px;
   text-align: left;
   font-weight: normal;
+
+  border-color: hsl(216deg 55.33% 91.52%);
 }
 
 /* Keep Proposed Action body centered */
