--- a/kayako-helper/src/styles/toggleableStyles.scss
+++ b/kayako-helper/src/styles/toggleableStyles.scss
@@ -43,7 +43,6 @@ $noteBackgroundColor: hsl(203 76% 99% / 1);
   border-bottom: none !important;
 
   width: 100%;
-  height: 100%;
 }
 
 #{sel.$conversationWindowHeaderInnerTabContainer}  {
@@ -577,15 +576,55 @@ $noteBackgroundColor: hsl(203 76% 99% / 1);
 // Table Contents
 #{sel.$ticketsTableContainer} #{sel.$generalTableBody} tr td:not(:first-child):not(:nth-child(2)),
 #{sel.$ticketsTableContainer} #{sel.$generalTableBody} tr td:not(:first-child):not(:nth-child(2)) > div > div,
-#{sel.$ticketsTableContainer} #{sel.$generalTableBody} tr td:not(:first-child):not(:nth-child(2)) > div > span,
-:not(#{sel.$ticketsTableContainer}):not(#{sel.$resultsTableContainer}) > #{sel.$generalTableContainer} #{sel.$generalTableBody} tr td:not(:first-child) > div{
+#{sel.$ticketsTableContainer} #{sel.$generalTableBody} tr td:not(:first-child):not(:nth-child(2)) > div > span
+//:not(#{sel.$ticketsTableContainer}):not(#{sel.$resultsTableContainer}) > #{sel.$generalTableContainer} #{sel.$generalTableBody} tr td:not(:first-child) > div{
+{
   text-align: center;
-  padding: 0 !important;
 
   display: flex;
-  justify-content: center;
+
+  padding: 12px 0 !important;
+
   align-items: center;
+  justify-content: center;
+
+
+  &:nth-of-type(1) {
+    justify-content: flex-start;
+  }
 }
+
+#{sel.$unifiedSearchResultsItemContent} {
+  padding: 12px 0 !important;
+}
+
+// Center every column except the “Conversation” column (2nd, after the checkbox)
+#{sel.$generalTable} {
+  thead th:not(:nth-child(2)),
+  tbody td:not(:nth-child(2)) {
+    text-align: center !important;
+  }
+
+  // Kayako ellipsis wrappers
+  thead th:not(:nth-child(2)) [class*="ko-table_column__ellipsis_"],
+  tbody td:not(:nth-child(2)) [class*="ko-table_cell__ellipsis_"] {
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+  }
+
+  // Keep the Conversation column left-aligned
+  thead th:nth-child(2),
+  tbody td:nth-child(2) {
+    text-align: left !important;
+  }
+
+  thead th:nth-child(2) [class*="ko-table_column__ellipsis_"],
+  tbody td:nth-child(2) [class*="ko-table_cell__ellipsis_"] {
+    justify-content: flex-start !important;
+  }
+}
+
 
 // For non-case-list tables
 :not(#{sel.$ticketsTableContainer}):not(#{sel.$resultsTableContainer}) > #{sel.$generalTableContainer} #{sel.$generalTableBody} tr td:not(:first-child) {
